//
//  AccessibilityIdentifier.swift
//  Missing
//
//  Created by Andy Kefir on 23/04/2025.
//

import Foundation

enum AccessibilityIdentifier: String {
    // MainTableViewController
    case mainTable = "mainTable"
    case openSearchButton = "openSearchButton"
    case bookmarksButton = "bookmarksButton"
    
    // SearchTableViewController
    case forenameTextField = "forenameTextField"
    case familyNameTextField = "familyNameTextField"
    case genderSegmentControl = "genderSegmentControl"
    case minAgeTextField = "minAgeTextField"
    case maxAgeTextField = "maxAgeTextField"
    case nationalityLabel = "nationalityLabel"
    case searchButton = "searchButton"
    
}
