...
    @IBOutlet weak var minAge: UITextField!
    @IBOutlet weak var maxAge: UITextField!
    @IBOutlet weak var nationalityLabel: UILabel!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Search"
        
        setupBindings()
        
        forename.delegate = self
        familyName.delegate = self
        minAge.delegate = self
...
