...
        setupUI()
        bindViewModel()
        viewModel.loadPersons()
    }

    private func setupUI() {
        title = "Missing People"
        navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .search, target: self, action: #selector(openSearchVC))
        navigationItem.leftBarButtonItem = UIBarButtonItem(barButtonSystemItem: .bookmarks, target: self, action: #selector(openSavedPersons))
        
        tableView.accessibilityIdentifier = AccessibilityIdentifier.mainTable.rawValue
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = AccessibilityIdentifier.openSearchButton.rawValue
        navigationItem.leftBarButtonItem?.accessibilityIdentifier = AccessibilityIdentifier.bookmarksButton.rawValue
...
